ecmascript/parser/tests/test262-error-references/fail/fa6a6d04f835e4c2.js.stderr
error: Expected {, got }
 --> $DIR/tests/test262-parser/fail/fa6a6d04f835e4c2.js:1:44
  |
1 | class A { constructor() {} 'constructor'() }
  |                                            ^

